--- a/index.html
+++ b/index.html
@@ -13,16 +13,22 @@
 </head>
 
 <body>
-  <!-- Site Overlay -->
-  <div class="site-overlay"></div>
-  <div id="container">
-     <div class="profile">
-       <div class="profile-pict"></div>
-       <h2>Warsame Bashir</h2>
-     </div>
-  </div>
-  </div>
-  <footer></footer>
+  <section class="navigation">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
+          <nav class="pull">
+            <ul class="top-nav">
+              <li><a href="#getstarted">Get Started <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+              <li><a href="#media">Media <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+              <li><a href="#features">Features <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+              <li class="nav-last"><a href="#design">Design <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
