Add HERO markup detail and styling and introduce main style css page as well media queries css file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <link rel="stylesheet" href="style.css" />
+  <!-- Bootstrap -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/mediaQueries.css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" rel="stylesheet">
+  <!-- Fonts -->
+  <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
   <!--favicon-->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
@@ -29,6 +36,67 @@
       </div>
     </div>
   </section>
+  <section class="hero" id="hero">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-right">
+          <a href="#"><i class="fa fa-navicon fa-2x nav_slide_button"></i></a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2 text-center">
+          <h1 class="animated bounceInDown">Starnight App</h1>
+          <p class="animated fadeInUpDelay">Lorem ipsum dolor sit amet</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2 col-md-offset-5 text-center">
+          <a href="http://player.vimeo.com/video/87701971?title=0&amp;byline=0&amp;portrait=0&amp;color=1883ad&amp;autoplay=1" class="hero-play-btn various fancybox.iframe">Play Button</a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3 text-center">
+          <a href="" class="get-started-btn">Get Started</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <p>Nam mi enim, auctor non ultricies a, fringilla eu risus. </p>
+        </div>
+        <div class="col-md-3">
+          <p>aliquam dolor. Cum sociis natoque penatibus et magnis</p>
+        </div>
+        <div class="col-md-2 col-md-offset-3">
+          <ul class="footer-nav">
+            <li><a href="#">Get Started Tutorial</a></li>
+            <li><a href="#">Introduction Video</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <a href="#" class="badge-btn">Badge Button</a>
+          <p class="footer-credit">Design by
+            <a href="http://www.blazrobar.com">Blaz Robar</a> | Developed by <a href="http://www.peterfinlan.com">Peter Finlan</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.pack.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="js/site.js"></script>
+  <script src="js/jquery.flexslider.js"></script>
+  <script src="js/jquery.smooth-scroll.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
+  <script src="js/waypoints.min.js"></script>
 </body>
 
 </html>
