Add play and hero image and expand to display video in main hero page with updates to markup

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       </div>
       <div class="row">
         <div class="col-md-8 col-md-offset-2 text-center">
-          <h1 class="animated bounceInDown">Starnight App</h1>
-          <p class="animated fadeInUpDelay">Lorem ipsum dolor sit amet</p>
+          <h1 class="animated bounceInDown">Warsame Bashir</h1>
+          <p class="animated fadeInUpDelay">Passion, Pursuit, Progress</p>
         </div>
       </div>
       <div class="row">
@@ -93,10 +93,10 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="js/site.js"></script>
-  <script src="js/jquery.flexslider.js"></script>
-  <script src="js/jquery.smooth-scroll.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.5.0/jquery.flexslider.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/1.5.5/jquery.smooth-scroll.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
-  <script src="js/waypoints.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.5/waypoints.js"></script>
 </body>
 
 </html>
