Server side persistent storage of emails with sqllite

--- a/index.html
+++ b/index.html
@@ -100,10 +100,13 @@
         <div class="row">
           <div class="col-md-6 col-md-offset-3 sign-up">
             <h2 class="logo-header">Don't be shy, Say hello!</h2>
-            <form name="signup-form">
+            <form  name="signup-form" method="post" accept-charset="utf-8" class="signup-form">
               <input class="signup-input" type="email" name="email_address" value="" placeholder="enter your email..." title="Please enter a valid email address." required>
-              <button type="submit" class="submit-btn">GO</button>
+              <input type="submit" class="submit-btn" value="GO"/>
             </form>
+            <div class="the-return">
+            [HTML is replaced when successful.]
+          </div>
           </div>
         </div>
       </div>
