Add top level section about, samples. Include Gruntfile for watching templates and include navigation and other templates

--- a/index.html
+++ b/index.html
@@ -22,20 +22,7 @@
 
 <body>
   <section class="navigation">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
-          <nav class="pull">
-            <ul class="top-nav">
-              <li><a href="#home">Home <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
-              <li><a href="#about">About <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
-              <li><a href="#samples">Samples <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
-              <li class="nav-last"><a href="#contact">Contact <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-    </div>
+    
   </section>
   <section class="hero" id="hero">
     <div class="container">
@@ -105,45 +92,27 @@
               <input type="submit" class="submit-btn" value="GO"/>
             </form>
             <div class="the-return">
-            [HTML is replaced when successful.]
+            
           </div>
           </div>
         </div>
       </div>
     </section>
-  <footer>
-    <div class="container">
-        <div class="row">
-          <div class="col-md-4 footer-leftcol">
-            <p><span class="bold-16p">AOD New York</span><br>
-            2250 Lexington Avenue<br>
-            Seattle, WA 10035 - <a href="#">warsame@domain.com</a>
-            </p>
-          </div>
-          <div class="col-md-4 footer-midcol">
-            <ul>
-              <li><a href="#" class="twitter-icon">Twitter</a></li>
-              <li><a href="#" class="facebook-icon">Facebook</a></li>
-              <li><a href="#" class="pintrest-icon">Pintrest</a></li>
-            </ul>
-            <div class="clearfix"></div>
-          </div>
-          <div class="col-md-4 footer-rightcol">
-            <p>Bixin <a href="#">Software</a></p>
-          </div>
-        </div>
-      </div>
-  </footer>
+  
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.3/handlebars.min.js" type="text/javascript" charset="utf-8">
+ </script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+ <script type='text/javascript' src='js/templates.js'></script>
+  <script type='text/javascript' src="js/setup.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.pack.js"></script>
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <script src="js/site.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.5.0/jquery.flexslider.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/1.5.5/jquery.smooth-scroll.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.5/waypoints.js"></script>
+  <script type='text/javascript' src="js/site.js"></script>
+  
 </body>
 
 </html>
