--- a/index.html
+++ b/index.html
@@ -2,23 +2,6 @@
 <html lang="en">
 
 <head>
-  <!-- Meta Stuff -->
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <!-- Bootstrap -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/flexslider.css?v=1.2" type="text/css">
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/mediaQueries.css" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" rel="stylesheet">
-
-  <!-- Fonts -->
-  <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-  <!--favicon-->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
@@ -112,6 +95,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/1.5.5/jquery.smooth-scroll.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.5/waypoints.js"></script>
+  <script src="js/jquery.notifyBar.js"></script>
+
+
   <script type='text/javascript' src="js/site.js"></script>
   
 </body>
