--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
       </div>
       <div class="row">
         <div class="col-md-6 col-md-offset-3 text-center">
-          <a href="" class="get-started-btn">More Please</a>
+          <a href="#slideshow" class="get-started-btn">More Please</a>
         </div>
       </div>
     </div>
   </section>
-  <section class="flex-container">
+  <section class="flex-container" id="slideshow">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
