Stock updater using google web service and asychronous updates

--- a/about.html
+++ b/about.html
@@ -33,7 +33,14 @@
           </div>
           
         </div>
-      </section>
+  </section>
+  <section class="features" id="credits">
+    <div class="container">
+          <div class="row">
+
+          </div>
+    </div>
+  </section>
 </body>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.3/handlebars.min.js" type="text/javascript" charset="utf-8">
  </script>
