--- a/samples.html
+++ b/samples.html
@@ -74,6 +74,14 @@
           </div>
         </div>
       </section>
+      <section class="features">
+        <div class="container">
+          <div class="row">
+            <h4> Stock Price Quote</h4>
+            <div id="divMain"></div>
+          </div>
+        </div>
+      </section>
 </body>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.3/handlebars.min.js" type="text/javascript" charset="utf-8">
  </script>
@@ -105,6 +113,7 @@
   <script type='text/javascript' src="js/site.js"></script>
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   <script type='text/javascript' src="js/chart.js"></script>
+  <script type='text/javascript' src="js/stock.js"></script>
 
   <script>plyr.setup();</script>
 
