Include project walkthrough, udpates to async, tetris game and overall styling

--- a/about.html
+++ b/about.html
@@ -27,7 +27,10 @@
             <div class="col-md-8 features-left col-md-offset-2 wp2 ">
               <h1>Video Game Enthusiast</h1>
               <p class="margin-bottom">I have a passion for 2d and 3d games both in how they are designed and architected. Single player games often display the effort it takes to build an aritificial intelligence while multiplayer games require careful attention to detail.</p>
-               <canvas  width='300' height='500'></canvas>
+              <div class="tetris-div"></div>
+              <br>
+              <a href="#playTetris" id="gameButton">Play Game</button>
+              <canvas id="playTetris" hidden  width='300' height='500'></canvas>
             </div>
             
           </div>
@@ -37,7 +40,41 @@
   <section class="features" id="credits">
     <div class="container">
           <div class="row">
+            <h2>External Resources Used In Project</h2>
+            <ul>
+              <li>
+                <a href="http://gruntjs.com/">GruntJS</a>
+                <p> Grunt to automate just about anything with a minimum of effort. I used Grunt to automate the templating approach for my project as I need to compile client side templates</p>
+              </li>
+              <li>
+                <a href="http://getbootstrap.com/">Bootstrap Theme</a>
+                Bootstrap makes front-end web development faster and easier. It's made for folks of all skill levels, devices of all shapes, and projects of all sizes.
+              </li>
+              <li>
+              <a href="http://handlebarsjs.com/">HandlebarsJS</a>
+              <p>Handlebars provides the power necessary to let you build semantic templates effectively with no frustration. I used it in my project for navigation templating and common functionality templates like the header and footer.</p>
+              </li>
+              <li>
+              <a href="https://github.com/Selz/plyr">PlyrJS</a>
+              <p>A simple HTML5 media player. I used it in my project for styling and displaying audio and video elements</p>
+              </li>
+              <li>
+              <a href="https://developers.google.com/chart/">Google Visualization/Charts</a>
+              <p>Interactive charts for browsers and mobile devices.</p>
+              </li>
+              <li>
+              <h4>Plugins</h4>
+              <p>Waypoint JS - Scrolling smoothly</p>
+              <p>FlexSlider - Slideshow functionality</p>
+              <p>Fancybox - Modal window functionality in video playing</p>
+              <p>JQuery - Everything :)</p>
+              </li>
 
+            </ul>
+          </div>
+          <div class="row">
+            <h2>Project</h2>
+            <a href="https://docs.google.com/document/d/1L4VawbjWRXQhAS9l4kRt5ZCQC4LOaWh4PqxbvNU4Nas/edit?usp=sharing">Project walkthrough</a>
           </div>
     </div>
   </section>
